Don't run double CI for PR and branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,9 @@
 ## test.yml
 
 name: Main workflow
-on: [push, pull_request]
+on:
+  push: {branches: [master]}
+  pull_request: {branches: [master]}
 
 jobs:
   build:
